# dashj-dpp-bindings

./: .gitignore  build.gradle  ktlint.gradle  settings.gradle
flapigen/: build.gradle
flapigen/src/main/java/org/dashj/dpp/: InternalPointerMarker.java  ProtocolVersion.java
flapigen/src/main/rust/: Cargo.toml  build.rs
flapigen/src/main/rust/src/: java_glue.rs.in
flapigen/src/test/kotlin/org/dashj/dpp/: ProtocolVersionTest.kt
manual/: build.gradle
manual/src/main/kotlin/org/dashj/dpp/: DPP.kt  ProtocolVersion.kt
manual/src/main/rust/: Cargo.toml
manual/src/main/rust/src/: lib.rs
manual/src/test/kotlin/org/dashj/dpp/: DPPTest.kt  ProtocolVersionTest.kt
simple-dpp/: Cargo.toml
simple-dpp/src/: lib.rs  simple_dpp.rs  state_repository.rs
uniffi/: README.md  build.gradle
uniffi/src/main/jniLibs/: libuniffi_kotlin_dpp.dylib
uniffi/src/main/rust/: Cargo.toml
uniffi/src/main/rust/src/: dpp.udl  lib.rs
uniffi/src/main/rust/src/errors/: mod.rs  protocol_error.rs
uniffi/src/main/rust/src/identifier/: identifier.rs
uniffi/src/main/rust/src/identity/: identity.rs  mod.rs
uniffi/src/main/rust/src/identity/identity_public_key/: mod.rs
uniffi/src/test/kotlin/org/dashj/dpp/: ProtocolVersionTest.kt
uniffi/src/test/kotlin/uniffi/kotlin_dpp/: test.kt
