[package]
name = "mylibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpp = { git = "https://github.com/dashpay/platform.git", branch = "v0.25-dev", features = ["cbor"], default-features = false }
platform-value = { git = "https://github.com/dashpay/platform.git", branch = "v0.25-dev", default-features = false }
hex = "0.4"

[lib]
name = "mylibrary"
crate-type = ["rlib"]